<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <!-- Name of the application. [CHAR_LIMIT=NONE] -->
    <string name="app_name">Prime Number Calculator</string>
    <string name="app_github">https://github.com/asdfasdfvful/Prime-Number-Calculator</string>

    <!-- Error displayed when expression evaluates to NaN. [CHAR_LIMIT=14] -->
    <string name="error_nan">Not a number</string>
    <!-- Error displayed when expression contains a syntax error. [CHAR_LIMIT=14] -->
    <string name="error_syntax">Error</string>

    <!-- Clear operation to clear the currently entered expression. [CHAR_LIMIT=3] -->
    <string name="clr">clr</string>
    <!-- Delete operation to remove last entered token. [CHAR_LIMIT=3] -->
    <string name="del">del</string>

    <!-- Content Descriptions -->
    <eat-comment />

    <!-- Content description for "clr" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_clr">clear</string>
    <!-- Content description for "del" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_del">delete</string>
    <!-- Content description for '=' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_eq">equals</string>

    <string name="eq">enter</string>
    <string name="back">"         \n         \nBack     "</string><!--added padding allows for bigger on click area-->

    <string name="advanced_themes">Themes</string>
    <string name="advanced_clear_list">Clear Stored List</string>
    <string name="advanced_help">Help</string>
    <string name="advanced_contact_me">Contact Me</string>
    <string name="advanced_rate_app">Rate App</string>
    <string name="advanced_share_app">Share App</string>
    <string name="advanced_about_dev">About Dev</string>
    <string name="advanced_other_apps">My Play Store</string>
    <string name="advanced_google_plus">My G+</string>
    <string name="advanced_source">View Source Code</string>
    <string name="advanced_credits">Credits</string>
    <string name="advanced_donate">Donate</string>

    <!--contact info-->
    <!--<string name="send_title">Send via</string>-->
    <string name="email_id">pitchedapps@gmail.com</string>
    <string name="email_subject">Prime Number Calculator Support</string>

    <!-- Sharing app -->
    <string name="share_title">Share via</string>
    <string name="share_one">"Check out Prime Number Calculator by "</string>
    <string name="share_two">.\n"Get it now at "</string>

    <!--Dev Info-->
    <string name="dev_name">Pitched Apps</string>
    <string name="dev_gplus_link">https://plus.google.com/+AllanWPitchedApps</string>
    <string name="dev_play_store">https://play.google.com/store/apps/developer?id=Pitched+Apps</string>

    <string name="advanced_help_content">Welcome to Prime Number Calculator, my first functional android app! I haven\'t added all the features I wanted yet, so everything is currently quite self explanatory. Type in a number and the app will tell you whether it is prime or not.</string>

    <string-array name="donation_google_catalog_values">
        <item>$1</item>
        <item>$2</item>
        <item>$3</item>
        <item>$5</item>
        <item>$10</item>
    </string-array>
    <string name="donation_paypal_item">Donation</string>



    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <string name="theme_display">Display Background</string>
    <string name="theme_display_text">Display Text</string>
    <string name="theme_clear_accent">Clear Display Accent</string>
    <string name="theme_numpad">Number Pad Background</string>
    <string name="theme_numpad_text">Number Pad Text</string>
    <string name="theme_advanced_numpad">Settings Background</string>
    <string name="theme_advanced_numpad_text">Settings Text</string>
    <!--<string name="theme_advanced_numpad_2">Press on Color to apply</string>-->
</resources>
