<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_display"
        android:title="@string/theme_display"
        android:defaultValue="0xFFFFFFFF"
        alphaSlider="true"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_display_text"
        android:title="@string/theme_display_text"
        android:defaultValue="0xFF000000"
        alphaSlider="false"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_clear_accent"
        android:title="@string/theme_clear_accent"
        android:defaultValue="0xFF00BCD4"
        alphaSlider="true"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_numpad"
        android:title="@string/theme_numpad"
        android:defaultValue="0xFF434343"
        alphaSlider="true"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_numpad_text"
        android:title="@string/theme_numpad_text"
        android:defaultValue="0xFFFFFFFF"
        alphaSlider="false"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_advanced_numpad"
        android:title="@string/theme_advanced_numpad"
        android:defaultValue="0xFF1DE9B6"
        alphaSlider="true"
        hexValue="true"/>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="theme_advanced_numpad_text"
        android:title="@string/theme_advanced_numpad_text"
        android:defaultValue="0xFF000000"
        alphaSlider="false"
        hexValue="true"/>
</PreferenceScreen>
